<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello!</string>
    <string name="appTitle">移动征管系统税管员平台</string>
    <string name="app_name">移动征管系统税管员平台</string>
    <string name="isExit">你想退出系统吗？</string>
    <string name="uid">用户名：</string>
    <string name="pwd">密     码：</string>
    <string name="cancelButton">取消</string>
    <string name="loginButton">登  录</string>
    <string name="cbRemember">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="nsrbm">纳税人编码:</string>
    <string name="nsrmc">纳税人名称:</string>
    <string name="djzt">登记状态:</string>
    <string name="gljg">管理机关:</string>
    <string name="zgy">税管员:</string>
    <string name="sbfs">申报方式:</string>
    <string name="zsfs">征收方式:</string>
    <string name="djlx">登记类型:</string>
    <string name="zclx">注册类型:</string>
    <string name="hy">行业:</string>
    <string name="xzjd">乡镇街道:</string>
    <string name="search_tj">请选择搜索条件</string>
    <string name="bm_search">按编码</string>
    <string name="mc_search">按名称</string>
    <string name="search_title">请选择纳税人</string>
    <string name="previous">上一页</string>
    <string name="next">下一页</string>
    <string name="title_quyu">甘肃地税</string>
    <string name="title_zgxt">移动征管系统</string>
    <string name="title_pt01">税管员平台</string>
    <string name="reset">系统设置</string>
    <string name="update">版本更新</string>
    <string name="relogin">重新登录</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="gn01">基础信息</string>
    <string name="gn02">银行信息</string>
    <string name="gn03">停业信息</string>
    <string name="gn04">减免信息</string>
    <string name="gn05">申报情况</string>
    <string name="gn06">缴款数据</string>
    <string name="gn07">核定信息</string>
    <string name="gn08">三税核定</string>
    <string name="gn09">减并征期</string>
    <string name="gn10">发票核定</string>
    <string name="gn11">发票领用</string>
    <string name="gn12">发票分析</string>
    <string name="gn13">定额分析</string>
    <string name="gn14">地图定位</string>
    <string name="gn15">待定功能</string>
    <string name="main_01">分户明细</string>
    <string name="main_02">总体分析</string>
    <string name="main_03">发票查询</string>
    <string name="main_04">税票查询</string>
    <string name="main_05">单户查询</string>
    <string name="main_06">管户分布</string>
    <string name="main_07">版本更新</string>
    <string name="main_08">退出系统</string>
    <string name="module_01">您所在模块:[分户明细模块]</string>
    <string name="module_02">您所在模块:[总体分析模块]</string>
    <string name="module_03">您所在模块:[发票查询模块]</string>
    <string name="module_04">您所在模块:[税票查询模块]</string>
    <string name="module_05">您所在模块:[单户查询模块]</string>
    <string name="module_06">您所在模块:[管户分布模块]</string>
    <string name="module_07">您所在模块:[版本更新模块]</string>
    <string name="module_08">您所在模块:[退出系统模块]</string>
    <string name="module_09">您所在模块:[申报分析模块]</string>
    <string name="module_10">您所在模块:[征收分析模块]</string>
    <string name="module_11">您所在模块:[入库分析模块]</string>
    <string name="maintop">移动征管系统税管员平台</string>
    <string name="welcome_sjzgxt">欢迎登录甘肃地税移动征管系统税管员平台</string>
    <string name="YH_title">纳税人银行信息列表</string>
    <string name="My_ver">系统版本更新</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="location">您所在机关：</string>
    <string name="welcome">欢迎您</string>
    <string name="man">先生</string>
    <string name="woman">女士</string>
    <string name="progressdialog_title">请稍等</string>
    <string name="progressdialog_message">正在为您处理</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!!!</string>
    <string name="maintab1">通知公告</string>
    <string name="maintab2">分户明细</string>
    <string name="maintab3">票据查询</string>    
    <string name="maintab4">待办任务</string>
    <string name="maintab5">统计分析</string>
    <string name="choose_text">选择</string>
    <string name="sys_sz">设  置</string> 
    <string name="sys_gb">关  闭</string>
    <string name="zwxx">暂无信息</string>
</resources>
