<?xml version="1.0" encoding="utf-8"?>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_height="fill_parent"
       android:layout_width="fill_parent"
       android:background="@drawable/login_bg"
       android:alpha="80">
       <!-- 顶部图标 -->

       <RelativeLayout
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/d04"
        android:background="@drawable/title_shape"
        android:gravity="center_vertical"
           >
       <ImageView
           android:id="@+id/image"
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:layout_marginLeft="5dp"
           android:layout_marginRight="5dp"
           android:src="@drawable/swtb" />
		 <TextView 
			android:id="@+id/title_zgxt"
			android:layout_width="wrap_content"
	        android:layout_height="fill_parent" 
	        android:layout_toRightOf="@+id/image"   
	        android:gravity="center_vertical"
	        android:text="@string/title_zgxt"
	        style="@style/sty_title_zgxt"
	        />
		  <TextView 
			android:id="@+id/title_pt"
			android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:padding="2dip"   
	        android:gravity="bottom"   
	        android:layout_alignParentRight="true" 	        
	        style="@style/sty_title_pt"
         />
	 </RelativeLayout>
	 <LinearLayout
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/d05"
        android:background="@color/c_menu"
        android:gravity="center_vertical"
        android:layout_below="@+id/main_title"
        android:orientation="horizontal"
           >
		   <Button
			android:text="@string/reset"
			android:id="@+id/reset"
			android:background="@color/c_menu"
			android:layout_weight="1"
			style="@style/sty_login_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
									/>
		   <Button
			android:text="@string/update"
			android:id="@+id/update"
			android:background="@color/c_menu"
			android:layout_weight="1"
			style="@style/sty_login_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
									/>	
		     <Button
			android:text="@string/relogin"
			android:id="@+id/relogin"
			android:background="@color/c_menu"
			android:layout_weight="1"
			style="@style/sty_login_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
									/>	
			<Button
			android:text="@string/about"
			android:id="@+id/about"
			android:background="@color/c_menu"
			android:layout_weight="1"
			style="@style/sty_login_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
									/>	
			<Button
			android:text="@string/exit"
			android:id="@+id/exit"
			android:background="@color/c_menu"
			android:layout_weight="1"
			style="@style/sty_login_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
									/>	
	 </LinearLayout> 
    	<!-- 底部Grid -->
    <GridView
    	android:id="@+id/gn_grid"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/menu"
    	android:numColumns="2"
    	android:layout_marginTop="@dimen/d04"
    	android:padding="5dip"
    	android:verticalSpacing="5dip"
    	android:horizontalSpacing="5dip"
    	android:stretchMode="columnWidth"/>
 </RelativeLayout>

