<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/login_bg"
    
    tools:context=".SjzcActivity" >
    <TextView 
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/d02"
        android:background="@drawable/title_shape"
        android:text="@string/loginButton"
        android:gravity="center"
        style="@style/sty_login_title"
    />
    
    <RelativeLayout 
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/yjjx_shape"
        android:layout_below="@id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        >
       <EditText
          android:id="@+id/username" 
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:numeric="integer"
          android:hint="@string/hint_username"
          style="@style/login_edit_style"
          
       />

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/username"
           android:layout_alignTop="@+id/username"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="3dp"
           android:src="@drawable/login_user" />
        
        <EditText
          android:id="@+id/password" 
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:password="true"
          android:layout_below="@id/username"
          android:hint="@string/hint_password"
          style="@style/login_edit_style"
          
       />

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/password"
           android:layout_alignTop="@+id/password"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="3dp"
           android:src="@drawable/login_pass"/>
       
       
       <Button
			android:text="@string/loginButton"
			android:id="@+id/login_bt"
			android:focusable="true"	
			android:layout_marginTop="20dp"
			android:background="@drawable/select_btn_login"
			style="@style/sty_login_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/password"		
			android:layout_alignRight="@id/password"
									/>	
									
       <LinearLayout 
            android:id="@+id/chkbox_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"	
            android:orientation="horizontal"
            android:layout_marginRight="60dp"
            android:gravity="center"
           >
          		<CheckBox
				android:id="@+id/cbRemember"	
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"	
				android:checked="false"
				style="@style/sty_login_chb"
				/> 
           
           		<TextView 
		    	android:id="@+id/cb_repass_txt"
		    	android:text="@string/cbRemember"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	style="@style/sty_login_btn"
		    	/>           
				<CheckBox
				android:id="@+id/auto_login"
				android:checked="false"
				android:layout_marginLeft="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/sty_login_chb"
				/>
				<TextView 
		    	android:id="@+id/cb_autologin_txt"
		    	android:text="@string/auto_login"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	style="@style/sty_login_btn"
		    	/>
           
       </LinearLayout>

    </RelativeLayout>
</RelativeLayout>