<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c1white"
    tools:context=".MainActivity" >
		<RelativeLayout
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/d04"
        android:background="@drawable/title_shape"
        android:gravity="center_vertical"
           >
       <ImageView
           android:id="@+id/image"
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:layout_marginLeft="5dp"
           android:layout_marginRight="5dp"
           android:src="@drawable/swtb" />
        <TextView 
			android:id="@+id/title_quyu"
			android:layout_width="wrap_content"
	        android:layout_height="fill_parent" 
	        android:layout_toRightOf="@+id/image"   
	        android:gravity="center_vertical"
	        android:text="@string/title_quyu"
	        style="@style/sty_title_zgxt"/>
		 <TextView 
			android:id="@+id/title_zgxt"
			android:layout_width="wrap_content"
	        android:layout_height="fill_parent" 
	        android:layout_toRightOf="@+id/title_quyu"   
	        android:gravity="center_vertical"
	        android:text="@string/title_zgxt"
	        style="@style/sty_title_zgxt"
	        />
		    
	 </RelativeLayout>
	 <RelativeLayout 
	     	android:id="@+id/userinfo"
	     	android:layout_width="match_parent"
	     	android:layout_height="25dp"
	     	android:layout_below="@id/main_title"
	     	android:background="@color/c_qianhui"
	     >
	      <TextView 
		    android:id="@+id/title_userinfo"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:gravity="left|center"		    		    
		    style="@style/sty_title_pt"
		    android:layout_marginLeft="10dp"
		    />	     
	     
	     	<Button
			android:text="@string/sys_sz"
			android:id="@+id/sys_sz"
			android:background="@color/c_menu"
			style="@style/sty_login_btn"
			android:layout_alignParentRight="true"
			android:layout_width="40dp"
			android:layout_height="match_parent"

/>	
	 </RelativeLayout>
	 
<TabHost
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/title_userinfo"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>  
        
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tabStripEnabled="false"
            android:background="@color/c_tab_bg"
            android:layout_weight="0"/>
        
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0"/>

    </LinearLayout>
</TabHost>

</RelativeLayout>
